@@ -62,6 +62,8 @@
 	Miscellaneous.
 
 	* runtest: Wait for a second for coredumps to make it to disk.
+	* libproc/Psymtab.c (Pbuild_file_symtab): Fix Ptrace()/Puntrace()
+	imbalance.
 
 2013-06-04  Nick Alcock  <nick.alcock@oracle.com>
 
